@startuml

class Book{
- String : m_sTitle
- String : m_sAuthor
- String : m_sIndex
- String : m_sType
--
constructor()
==
+ getBookIndex()
+ getBookTitle()
+ getBookType()
--
+ setBookAuthor()
+ setBookIndex()
+ setBookTitle()
+ setBookType()
}

Book "0..*" --* "1 " Library

class Library{
- ArrayList <Book> m_aBookListArray
--
constructor()
==
+ getAllBooks();
+ addBook();
+ getBookStartWith(String : "A")
+ getAllOddIndexedBook();
--
+ getBookListArray();
--
+ addBookListArray();
}

class UserInterface{
Scanner userInput
Library myLibrary
bookList
==
+ launchApplication();
+ chooseOption();
+ addSomeBook();
+ askOddIndexedBook();
+ askTitleStartWithLetter(String :query);
+ askAllBooks();
+ getStatistic();
- rateOccurence();
}

class Roman extends Book{
constructor()
}

class Thriller extends Book {
constructor()
}

class Cartoon extends Book{
constructor()
}

class Main{

}

UserInterface  - Library
UserInterface -- Main :  launchApplication()
@enduml